Add : hookaria games internship

--- a/html/projects/video-games/hold-the-mine.html
+++ b/html/projects/video-games/hold-the-mine.html
@@ -33,7 +33,7 @@
 
     <section id="blog-section" class="div-row">
         <div class="div-column">
-            <p><b>2025 📆</b> <b>Unity</b></p>
+            <p><b>2025 📆</b> <b>Unity</b><b>Steam 🤖</b><b>Hookaria Games</b></p>
             <p><i>Explore and defend your mine against waves of monsters in this innovative roguelike survival game ! Collect and manage your resources, discover buildings with unique effects and unleash mighty heroes to hold monsters out of the mine until the sun rises.</i></p>
             <p>I was able to work on Hold The Mine during my internship at <a class="link-in-text" href="https://www.hookariagames.com/" target="_blank">Hookaria Games</a> (to learn more about the internship, you can read this article : <a class="link-in-text" href="/html/blog/hookaria-games-internship.html">02.09.2025 - Hookaria Games Internship</a>)</p>
             <div class="div-row" style="width: 100%; height: 30rem; margin-bottom: 1rem;">
@@ -46,8 +46,10 @@
             </div>
             <p>The game was mainly developed by Morgan Seurre (programming, art, design). He is a former colleague from Blanket Games aaaand was my boss for the last six months. In addition to Morgan, three different freelancers stepped in at different stages of the production.</p>
             <p>First there was Jeanne Prigent, which I also had the chance to work with at Blanket Games (<a class="link-in-text" href="/html/projects/video-games/overboss.html">Overboss</a>, <a class="link-in-text" href="/html/projects/video-games/rolling-food-chain.html">Creeping Deck</a>, <a class="link-in-text" href="/html/projects/video-games/protectors-of-pomelo.html">Protectors of Pomelo</a>). She is a 2D game artist and animator (<a class="link-in-text" href="/html/blog/hookaria-games-internship.html">https://jeanneprigent.wordpress.com/</a>). Camille Coq has also worked on the animation part of the game (<a class="link-in-text" href="/html/blog/hookaria-games-internship.html">https://camillecee.weebly.com/</a>). And finally, Antoine Zakrzewski aka Zakku made the sound and music, like on <a class="link-in-text" href="/html/projects/video-games/rolling-food-chain.html">Rolling Food Chain</a> (<a class="link-in-text" href="/html/blog/hookaria-games-internship.html">https://bento.me/zakku</a>).</p>
+            <img src="/img/video-games/hold-the-mine/htm-team.png">
             <p>I was not working full time on the game at all, I was more of a support here and there. My help mainly consisted in programming and a little bit of design brainstorming. I had to add content : hero and power integration, gamefeel, UI animations, achievement system, also gave a bit of help on a recursive algorithm linked to pathfinding, etc…</p>
             <p>I think Hold The Mine is really great and has a lot of potential, I just can't wait to see the final result ! To support the game, you can <a class="link-in-text" href="https://store.steampowered.com/app/3164960/Hold_The_Mine/" target="_blank">wishlist it on Steam !</a></p>
+            <img src="/img/video-games/hold-the-mine/htm-screens.png">
         </div>
         
         <div class="div-column">
