add : prototyping quickly

--- a/index.html
+++ b/index.html
@@ -78,9 +78,8 @@
                     <p class="project-window-title" id="project-id">Blog</p>
                 </div>
                 <div class="project-window-content" style="display: flex; flex-direction: column;">
-                    <a class="external-link" href="/html/blog/hookaria-games-internship.html">02.09.2025 - Internship at hookaria games</a>
-                    <!-- <a class="external-link" href="">06.08.2025 - How to quickly add gamefeel to a prototype ?</a>
-                    <a class="external-link" href="">07.01.2025 - Making a level design tool for Saudade</a> -->
+                    <a class="external-link" href="/html/blog/2025-09-03-prototyping-quickly.html">03.09.2025 - How to prototype quickly ?</a>
+                    <a class="external-link" href="/html/blog/2025-09-02-hookaria-games-internship.html">02.09.2025 - Internship at hookaria games</a>
                 </div>
             </div>
 
